app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloworld
spec:
  ingressClassName: "nginx"
  rules:
    - host: "helloworld.my.app"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: helloworld-service
              port:
                number: 8080
